Add contracts and phat contract vrf/frame scripts

--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "next:check-types": "yarn workspace @se-2/nextjs check-types",
     "next:format": "yarn workspace @se-2/nextjs format",
     "next:lint": "yarn workspace @se-2/nextjs lint",
+    "phat-frame:build": "yarn workspace @phala-frame/se-2 build",
+    "phat-frame:run": "yarn workspace @phala-frame/se-2 run",
+    "phat-frame:watch": "yarn workspace @phala-frame/se-2 watch",
+    "phat-vrf:build": "yarn workspace @phala-vrf/se-2 build",
+    "phat-vrf:run": "yarn workspace @phala-vrf/se-2 run",
+    "phat-vrf:watch": "yarn workspace @phala-vrf/se-2 watch",
     "precommit": "lint-staged",
     "prepare": "install-self-peers -- --ignore-scripts",
     "start": "yarn workspace @se-2/nextjs dev",
